color selector styling and function

--- a/components/color-selector/colorselector.html
+++ b/components/color-selector/colorselector.html
@@ -1,26 +1,19 @@
-<style>
-    .swatch-list {
-        list-style: none;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-    }
-    .swatch {
-        margin: 0.15rem;
-        padding: 0.15rem;
-        width: 1.5rem;
-        height: 1.5rem;
-        border: 0.25rem solid rgba(0,0,0,0);
-    }
-    .swatch:hover {
-        border: 0.25rem solid #dadada;
-    }
-</style>
-<!-- <select 
-    ng-options="color as color.name for color in $ctrl.colors"
-    ng-model="$ctrl.selectedColor"
-    ng-change="$ctrl.setColor()">
-</select> -->
-<ul class="swatch-list">
-    <li ng-repeat="color in $ctrl.colors" ng-click="$ctrl.setColor(color)" class="swatch" style="background-color:{{color.patternId.fill}}"></li>
-</ul>
+<div class="color-selector-container">
+    <button class="color-selector" ng-click="$ctrl.editMode = !$ctrl.editMode">
+        <div class="selected-color">
+            <span class="swatch" style="background-color:{{$ctrl.selectedColor.patternId.fill}}"></span>
+            <span>{{$ctrl.selectedColor.name}}</span>
+        </div>
+        <i class="fas" ng-class="{'fa-chevron-up': $ctrl.editMode, 'fa-chevron-down': !$ctrl.editMode}"></i>
+    </button>
+    <ul class="swatch-list" ng-show="$ctrl.editMode">
+        <li ng-repeat="color in $ctrl.colors" 
+            ng-click="$ctrl.setColor(color)" 
+            ng-mouseenter="color.showTooltip = true"
+            ng-mouseleave="color.showTooltip = false"
+            class="swatch" 
+            style="background-color:{{color.patternId.fill}}">
+            <p ng-show="color.showTooltip" class="color-tooltip">{{color.name}}</p>
+        </li>
+    </ul>
+</div>
