overall page styles and responsive

--- a/components/cardigan/cardigan-svg.html
+++ b/components/cardigan/cardigan-svg.html
@@ -1,4 +1,4 @@
-<svg width="375" height="500" style="width:375px;">
+<svg viewBox="0 0 375 500">
     <!-- Right and left are from viewer's perspective -->
       <polygon id="leftSleeve" points="8,250 40,200 105,145 125,155 65,290 45,420 8,420"
       ng-style="$ctrl.selectedOptions.colorOption3.patternId" style="stroke:#000;stroke-width:2;stroke-opacity: 0.3;" />
