--- a/components/cardigan/cardigan.html
+++ b/components/cardigan/cardigan.html
@@ -1,8 +1,8 @@
-<div style="display: flex; flex-direction: row;">
-  <cardigan-svg selected-options="selectedOptions"></cardigan-svg>
+<div class="builder-container">
+  <cardigan-svg class="svg-background" selected-options="selectedOptions"></cardigan-svg>
   <div>
       <div>
-          <h3>Choose Color Options</h3>
+          <h1 class="option-banner">My Custom Cardigan</h1>
           <div>
               <label>Main Body</label>
               <color-selector on-update="selectedOptions.colorOption1 = color"></color-selector>
