options header adjustments

--- a/components/cardigan/cardigan.html
+++ b/components/cardigan/cardigan.html
@@ -17,7 +17,7 @@
           </div>
           
               <!-- EXTRA OPTIONS -->
-          <h3>Additional Options</h3>
+          <h3 class="option-banner">Additional Options</h3>
           <div>
               <label><input type="checkbox" ng-model="selectedOptions.extras.option1.show"> Add Sleeve Cuffs</label>
               <color-selector ng-if="selectedOptions.extras.option1.show" on-update="selectedOptions.extras.option1.color = color"></color-selector>
