--- a/components/itemlist/itemlist.html
+++ b/components/itemlist/itemlist.html
@@ -1,1 +1,11 @@
-<h1>Item List</h1>
+<div class="item-list-container">
+    <h2>Choose An Item To Customize</h2>
+    <ul class="item-list">
+        <li ng-repeat="item in $ctrl.items">
+            <a class="item-card" style="background-image:url({{item.image}})" ng-href="#!{{item.link}}">
+                <span class="item-card-title">{{item.title}}</span>
+            </a>
+        </li>
+    </ul>
+    <!-- <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fbumbywool%2Fphotos%2Fa.10158066051381272%2F10158066061041272%2F%3Ftype%3D3&show_text=false&width=500" width="500" height="375" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe> -->
+</div>
