--- a/index.css
+++ b/index.css
@@ -1,21 +1,94 @@
 body {
     font-family: "Merriweather", sans-serif;
     margin: 0;
+    color: #222;
 }
 
-.banner {
-    padding: 0.5rem 0;
+.nav {
     min-width: 100%;
-    background: #b7b7b7;
+    background: #222;
     margin-bottom: 1rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: 1.25rem;
+    box-shadow: 0 0 0.15rem 0.15rem rgba(0,0,0,0.25);
 }
 
-.banner-home {
-    margin-left: 2rem;
+.nav-home {
+    background-color: #d2d3cf;
+    padding: 0 1rem;
 }
 
-.banner img {
+.nav img {
     height: 4rem;
+}
+
+.nav-link {
+    margin-left: 1rem;
+    padding: 1rem;
+    border-radius: 0.25rem;
+    text-decoration: none;
+    color: #fff;
+}
+
+.nav-link:hover, .nav-link:active {
+    background-color: #333;
+}
+
+.item-list-container {
+    margin: 1rem 2rem;
+}
+
+.item-list {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 0;
+}
+
+.item-list > li {
+    list-style: none;
+}
+
+.item-card {
+    display: block;
+    margin: 0.5rem;
+    padding: 0.5rem;
+    height: 25rem;
+    width: 20rem;
+    background-size: cover;
+    border-radius: 0.25rem;
+    position: relative;
+    box-shadow: 0 0 0.15rem 0.15rem rgba(0, 0, 0, 0.05) inset;
+}
+
+.item-card:hover, 
+.item-card:active, 
+.item-card:focus {
+    box-shadow: 0 0 0.15rem 0.15rem rgba(0, 0, 0, 0.15) inset;
+}
+
+.item-card-title {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: calc(100% - 1.6em);
+    padding: 1rem;
+    background: rgba(34,34,34, 0.7);
+    border-bottom-left-radius:0.25rem;
+    border-bottom-right-radius:0.25rem;
+    font-size: 1.25rem;
+    font-weight: bold;
+    color: rgba(255,255,255, 0.9);
+    text-align: center;
+}
+
+.item-card:hover .item-card-title, 
+.item-card:active .item-card-title, 
+.item-card:focus .item-card-title {
+    background: rgba(51,51,51, 0.7);
 }
 
 .builder-container {
@@ -26,7 +99,7 @@ body {
 }
 
 .svg-background {
-    background-color: rgb(172,173,155);
+    background-color: rgb(210, 211, 207);
     border-radius: 0.75rem;
     width: calc((85vh - 2rem)*0.66);
     max-height: 85vh;
@@ -35,7 +108,6 @@ body {
 }
 
 .option-banner {
-    color: #8E7356;
     margin-top: 0.10rem;
 }
 
