--- a/components/sweater/sweater.html
+++ b/components/sweater/sweater.html
@@ -1,8 +1,8 @@
 <div class="builder-container">
-  <cardigan-svg class="svg-background" selected-options="selectedOptions"></cardigan-svg>
+  <sweater-svg class="svg-background" selected-options="selectedOptions"></sweater-svg>
   <div>
       <div>
-          <h1 class="option-banner">My Custom Cardigan</h1>
+          <h1 class="option-banner">My Custom Sweater</h1>
           <div>
               <label>Main Body</label>
               <color-selector on-update="selectedOptions.colorOption1 = color"></color-selector>
